Raven.A1
Hardware and software binary release

20251226:
  rom:      updated EmuTOS (#24dff9a @ 20251225)
  rom:      enabled EmuTOS SCSIDRV
  rom:      include uip.tos in romdisk
  software: fixed potential stack bug in all purec based programs
  rvsnd:    fixed missing PSG flag in SND cookie
  
20251215:
  rom:      map entire 16MB isa-ram rather than only first 4MB

20251214:
  rom:      support EmuTOS Shutdown feature (when ckbd is present)
  rom:      removed nova driver specific pmmu mapping
  rvnova:   add nova driver specific pmmu mapping
  isa_bios: support isa-interrupt callbacks

20251208:
  rom:      disable store/load bypass on rev1+5 cpu
  rom:      moved motorola sp060 into bootrom
  rom:      emutos panic message now outputs on raven serial
  rvbios:   moved motorola sp060 into bootrom
  rvbios:   settime/gettime implemention for rtc
  software: rvsnd added (work in progress)
  firmware: (nessi) included version 251029

20251007:
  rom:      ensure caches enabled during vgabios calls
  rvnova:   remove temporary vgabios workarounds

20251004:
  rom:      improved generic vga compatibility
  rvnova:   improved generic vga compatibility
  rvnova:   Cirrus Logic GD5434 driver
  rvbios:   bootscreen
  software: PicoGUS driver updated

20250914:
  rvbios:   prevent showing boot screen twice under MagiC
  software: added 3rd party fpupatch
  software: added 3rd party xboot

20250827:
  rom:      updated to EmuTOS 1.4
  rom:      x86 emulation bugfix
  rvnova:   Cirrus Logic GD54xx driver (blitter support)
  rvnova:   WDC90C31 driver (blitter support)
  rvnova:   OAK driver

20250808:
  rom:      layout and size optimization
  rom:      wip configspace for system settings
  firmware: (simm programmer) support for rom configspace
  rvbios:   get chipset version from bootrom
  rvnova:   generic vga driver

20250718
  rom:      improved IDE speed (4.8 -> 7.9 MB/s)
  firmware: (nessi) improved cf-card compatibility

20250627