@@ -1,0 +1,13 @@
+
+NAME = vt52_8x8
+
+BIN = $(NAME).prg
+PRJ = purec.prj
+
+INSTALL_ROOT = c:/raven
+INSTALL_BINS = $(BIN)
+
+OBJS = main.o
+
+ROOTDIR = ../..
+include $(ROOTDIR)/Makefile.cmn
