@@ -1,0 +1,6 @@
+Use 8x8 system font in VT52 terminal regardless of screen resolution.
+
+It needs to run _after_ the workspace has opened and resolution has
+changed so it doesn't do any good running from the AUTO folder.
+
+Instead, install it as a desktop application that auto runs.
