@@ -1,6 +1,11 @@
 Raven.A1
 Hardware and software binary release
 
+xxxxxxxx:
+  rom:      default to 8x8 font during boot
+  rvnova:   default to 8x8 font during boot
+  software: added small util to set 8x8 font in VT52 terminal
+
 20251226:
   rom:      updated EmuTOS (#24dff9a @ 20251225)
   rom:      enabled EmuTOS SCSIDRV
